# bug-free-quacamole

./: .gitignore  README.md  app.py  app2.py  pyproject.toml
.claude/: architecture.md  frontend.md  plan.md  problem-statement.md
.claude/agents/: adk-backend-specialist.md  fastapi-backend-runner.md  streamlit-frontend-runner.md
src/draw_dash/: __init__.py  backend.py  constant.py  db.py  duckdb_manager.py  util.py
src/draw_dash/agents/dash_agent/: agent.py
src/draw_dash/agents/data_agent/: agent.py
src/draw_dash/agents/json_extractor_agent/: agent.py
src/draw_dash/agents/orchestrator_agent/: agent.py
src/draw_dash/agents/query_execution_agent/: agent.py
src/draw_dash/agents/query_generator_agent/: agent.py
src/draw_dash/agents/sequential_agent/: agent.py
src/draw_dash/frontend/: __init__.py  api_client.py  state.py  styles.css
src/draw_dash/frontend/components/: debug_panel.py
src/draw_dash/frontend/screens/: __init__.py  chat_screen.py  (+2 more)
src/draw_dash/frontend2/: dashboard_screen.py  state.py
src/draw_dash/json_extractor_agent/: agent.py
src/draw_dash/orchestrator_agent/: __init__.py  agent.py
src/draw_dash/query_execution_agent/: agent.py  query_execution_agent.evalset.json
src/draw_dash/query_generator_agent/: __init__.py  agent.py
src/draw_dash/query_loop_agent/: __init__.py  agent.py
src/draw_dash/sequential_orchestrator/: __init__.py  agent.py
src/draw_dash/tool/: __init__.py  dashboard.py  diagnose_sql_error.py  execute_query.py  execute_sql.py  read_data.py
src/draw_dash/vision_agent/: __init__.py  agent.py
(+3 files in other folders)
